k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: inventory-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-backend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: inventory-backend
